// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseDetails refreshes courses and tabs 1`] = `
<CourseDetails
  courseID="1"
  navigator={
    Object {
      "dismiss": [Function],
      "dismissAllModals": [Function],
      "isModal": false,
      "launchExternalTool": [Function],
      "pop": [Function],
      "show": [Function],
      "traitCollection": [Function],
    }
  }
  refresh={[Function]}
  refreshCourses={[Function]}
  refreshLTITools={[Function]}
  refreshTabs={[Function]}
  refreshing={false}
  tabs={Array []}
/>
`;

exports[`CourseDetails refreshes when props change 1`] = `
<CourseDetails
  course={
    Object {
      "account_id": "1",
      "course_code": "rn 101",
      "default_view": "wiki",
      "end_at": "2030-02-08T23:13:39Z",
      "enrollments": Array [
        Object {
          "enrollment_state": "active",
          "role": "TeacherEnrollment",
          "role_id": "1",
          "type": "teacher",
          "user_id": "1",
        },
      ],
      "id": "1",
      "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
      "is_favorite": true,
      "name": "Learn React Native",
      "permissions": Object {
        "viewAllGrades": true,
        "viewAnalytics": true,
      },
      "short_name": "rn",
      "term": Object {
        "created_at": "2018-02-08T23:13:39Z",
        "end_at": "2030-02-08T23:13:39Z",
        "id": "1",
        "name": "Default Term",
        "start_at": "2018-02-08T23:13:39Z",
        "workflow_state": "available",
      },
      "workflow_state": "available",
    }
  }
  courseID="1"
  navigator={
    Object {
      "dismiss": [Function],
      "dismissAllModals": [Function],
      "isModal": false,
      "launchExternalTool": [Function],
      "pop": [Function],
      "show": [Function],
      "traitCollection": [Function],
    }
  }
  refresh={[Function]}
  refreshCourses={[Function]}
  refreshLTITools={[Function]}
  refreshTabs={[Function]}
  refreshing={false}
  tabs={Array []}
/>
`;

exports[`CourseDetails renders correctly 1`] = `
<Screen
  automaticallyAdjustsScrollViewInsets={false}
  disableGlobalSafeArea={true}
  drawUnderNavBar={true}
  navBarStyle="dark"
  navBarTransparent={true}
  onTraitCollectionChange={[Function]}
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Edit course settings",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/course/Settings.png",
        },
        "testID": "course-details.navigation-edit-course-btn",
      },
    ]
  }
  showDismissButton={true}
  statusBarStyle="default"
  title="rn 101"
>
  <View
    refreshing={false}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <OnLayout
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-start",
        }
      }
    />
    <AnimatedComponent
      pointerEvents="none"
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "left": 0,
            "overflow": "hidden",
            "padding": 10,
            "paddingTop": 20,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": 235,
          },
        ]
      }
    >
      <OnLayout
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "marginHorizontal": 0,
              "marginTop": 44,
            },
          ]
        }
      >
        <AnimatedComponent
          numberOfLines={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 3,
                "textAlign": "center",
              },
              Object {
                "opacity": 1,
              },
            ]
          }
          testID="course-details.title-lbl"
        >
          Learn React Native
        </AnimatedComponent>
        <AnimatedComponent
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontWeight": "600",
                "opacity": 0.9,
              },
              Object {
                "opacity": 1,
              },
            ]
          }
          testID="course-details.subtitle-lbl"
        >
          Default Term
        </AnimatedComponent>
      </View>
    </AnimatedComponent>
  </View>
</Screen>
`;

exports[`CourseDetails renders correctly without tabs 1`] = `
<Screen
  automaticallyAdjustsScrollViewInsets={false}
  disableGlobalSafeArea={true}
  drawUnderNavBar={true}
  navBarStyle="dark"
  navBarTransparent={true}
  onTraitCollectionChange={[Function]}
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Edit course settings",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/course/Settings.png",
        },
        "testID": "course-details.navigation-edit-course-btn",
      },
    ]
  }
  showDismissButton={true}
  statusBarStyle="default"
  title="rn 101"
>
  <View
    refreshing={false}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <OnLayout
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-start",
        }
      }
    />
    <AnimatedComponent
      pointerEvents="none"
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "left": 0,
            "overflow": "hidden",
            "padding": 10,
            "paddingTop": 20,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": 235,
          },
        ]
      }
    >
      <OnLayout
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "marginHorizontal": 0,
              "marginTop": 44,
            },
          ]
        }
      >
        <AnimatedComponent
          numberOfLines={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 3,
                "textAlign": "center",
              },
              Object {
                "opacity": 1,
              },
            ]
          }
          testID="course-details.title-lbl"
        >
          Learn React Native
        </AnimatedComponent>
        <AnimatedComponent
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontWeight": "600",
                "opacity": 0.9,
              },
              Object {
                "opacity": 1,
              },
            ]
          }
          testID="course-details.subtitle-lbl"
        >
          Default Term
        </AnimatedComponent>
      </View>
    </AnimatedComponent>
  </View>
</Screen>
`;

exports[`CourseDetails renders with empty image url 1`] = `
<Screen
  automaticallyAdjustsScrollViewInsets={false}
  disableGlobalSafeArea={true}
  drawUnderNavBar={true}
  navBarStyle="dark"
  navBarTransparent={true}
  onTraitCollectionChange={[Function]}
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Edit course settings",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/course/Settings.png",
        },
        "testID": "course-details.navigation-edit-course-btn",
      },
    ]
  }
  showDismissButton={true}
  statusBarStyle="default"
  title="rn 101"
>
  <View
    refreshing={false}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <OnLayout
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-start",
        }
      }
    />
    <AnimatedComponent
      pointerEvents="none"
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "left": 0,
            "overflow": "hidden",
            "padding": 10,
            "paddingTop": 20,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": 235,
          },
        ]
      }
    >
      <OnLayout
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "marginHorizontal": 0,
              "marginTop": 44,
            },
          ]
        }
      >
        <AnimatedComponent
          numberOfLines={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 3,
                "textAlign": "center",
              },
              Object {
                "opacity": 1,
              },
            ]
          }
          testID="course-details.title-lbl"
        >
          Learn React Native
        </AnimatedComponent>
        <AnimatedComponent
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontWeight": "600",
                "opacity": 0.9,
              },
              Object {
                "opacity": 1,
              },
            ]
          }
          testID="course-details.subtitle-lbl"
        >
          Default Term
        </AnimatedComponent>
      </View>
    </AnimatedComponent>
  </View>
</Screen>
`;

exports[`CourseDetails renders with image url 1`] = `
<Screen
  automaticallyAdjustsScrollViewInsets={false}
  disableGlobalSafeArea={true}
  drawUnderNavBar={true}
  navBarStyle="dark"
  navBarTransparent={true}
  onTraitCollectionChange={[Function]}
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Edit course settings",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/course/Settings.png",
        },
        "testID": "course-details.navigation-edit-course-btn",
      },
    ]
  }
  showDismissButton={true}
  statusBarStyle="default"
  title="rn 101"
>
  <View
    refreshing={false}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <OnLayout
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-start",
        }
      }
    />
    <AnimatedComponent
      pointerEvents="none"
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "left": 0,
            "overflow": "hidden",
            "padding": 10,
            "paddingTop": 20,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": 235,
          },
        ]
      }
    >
      <OnLayout
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "marginHorizontal": 0,
              "marginTop": 44,
            },
          ]
        }
      >
        <AnimatedComponent
          numberOfLines={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 3,
                "textAlign": "center",
              },
              Object {
                "opacity": 1,
              },
            ]
          }
          testID="course-details.title-lbl"
        >
          Learn React Native
        </AnimatedComponent>
        <AnimatedComponent
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontWeight": "600",
                "opacity": 0.9,
              },
              Object {
                "opacity": 1,
              },
            ]
          }
          testID="course-details.subtitle-lbl"
        >
          Default Term
        </AnimatedComponent>
      </View>
    </AnimatedComponent>
  </View>
</Screen>
`;

exports[`CourseDetails renders without course 1`] = `<ActivityIndicatorView />`;

exports[`CourseDetails renders without image url 1`] = `
<Screen
  automaticallyAdjustsScrollViewInsets={false}
  disableGlobalSafeArea={true}
  drawUnderNavBar={true}
  navBarStyle="dark"
  navBarTransparent={true}
  onTraitCollectionChange={[Function]}
  rightBarButtons={
    Array [
      Object {
        "accessibilityLabel": "Edit course settings",
        "action": [Function],
        "image": Object {
          "testUri": "../../../src/images/course/Settings.png",
        },
        "testID": "course-details.navigation-edit-course-btn",
      },
    ]
  }
  showDismissButton={true}
  statusBarStyle="default"
  title="rn 101"
>
  <View
    refreshing={false}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <OnLayout
      style={
        Object {
          "flex": 1,
          "justifyContent": "flex-start",
        }
      }
    />
    <AnimatedComponent
      pointerEvents="none"
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "left": 0,
            "overflow": "hidden",
            "padding": 10,
            "paddingTop": 20,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": 235,
          },
        ]
      }
    >
      <OnLayout
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
            Object {
              "marginHorizontal": 0,
              "marginTop": 44,
            },
          ]
        }
      >
        <AnimatedComponent
          numberOfLines={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 3,
                "textAlign": "center",
              },
              Object {
                "opacity": 1,
              },
            ]
          }
          testID="course-details.title-lbl"
        >
          Learn React Native
        </AnimatedComponent>
        <AnimatedComponent
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "white",
                "fontWeight": "600",
                "opacity": 0.9,
              },
              Object {
                "opacity": 1,
              },
            ]
          }
          testID="course-details.subtitle-lbl"
        >
          Default Term
        </AnimatedComponent>
      </View>
    </AnimatedComponent>
  </View>
</Screen>
`;
